@@ -65,12 +65,17 @@
 							 *Filter of blog description
 							 **/
 							echo apply_filters( 'manduca_blog_description', '' );
+							
+							/*
+							 **/
+							$placeholder = apply_filters( 'manduca_search_placeholder', __( 'Search', 'manduca' ) );
+							
 							?>
 							
 							<form role="search" method="get" id="header-searchform" class="header-searchform" action="<?php echo esc_url( home_url( '/' ) ); ?>">
 							<div>
 								<label for="s" ><?php _e( 'Search', 'manduca' ) ?></label>
-								<input type="text" placeholder="<?php _e( 'Search', 'manduca' ) ?>" value="<?php echo get_search_query(); ?>" name="s"  id="s" />
+								<input type="text" placeholder="<?php echo $placeholder; ?>" value="<?php echo get_search_query(); ?>" name="s"  id="s" />
 								<button type="submit" class="search-submit" id="search-submit" aria-label="<?php _e( 'Start search', 'manduca' ) ?>" >
 									<span class="screen-reader-text">
 										<?php _e( 'Search', 'manduca' ) ?>
@@ -90,21 +95,16 @@
 							<img src="<?php header_image(); ?>" class="header-image" width="<?php echo esc_attr( get_custom_header()->width ); ?>" height="<?php echo esc_attr( get_custom_header()->height ); ?>" alt="<?php echo esc_attr( manduca_get_header_image_alt() ); ?>" />
 						<?php endif; ?>
 					
-					<button id="menu-toggle" class="menu-toggle"><svg viewBox="0 0 1792 1792" xmlns="http://www.w3.org/2000/svg"><path d="M1664 1344v128q0 26-19 45t-45 19h-1408q-26 0-45-19t-19-45v-128q0-26 19-45t45-19h1408q26 0 45 19t19 45zm0-512v128q0 26-19 45t-45 19h-1408q-26 0-45-19t-19-45v-128q0-26 19-45t45-19h1408q26 0 45 19t19 45zm0-512v128q0 26-19 45t-45 19h-1408q-26 0-45-19t-19-45v-128q0-26 19-45t45-19h1408q26 0 45 19t19 45z"/></svg><?php _e( 'Menu', 'manduca' ) ?></button>	
+										
+					<button id="menu-toggle" class="menu-toggle"><svg viewBox="0 0 1792 1792" xmlns="http://www.w3.org/2000/svg"><path d="M1664 1344v128q0 26-19 45t-45 19h-1408q-26 0-45-19t-19-45v-128q0-26 19-45t45-19h1408q26 0 45 19t19 45zm0-512v128q0 26-19 45t-45 19h-1408q-26 0-45-19t-19-45v-128q0-26 19-45t45-19h1408q26 0 45 19t19 45zm0-512v128q0 26-19 45t-45 19h-1408q-26 0-45-19t-19-45v-128q0-26 19-45t45-19h1408q26 0 45 19t19 45z"/></svg><span><?php _e( 'Menu', 'manduca' ) ?></span></button>	
 					
 					<div id="site-header-menu" class="site-header-menu">
 						<?php if ( has_nav_menu( 'primary' ) ) : ?>
 							<nav id="site-navigation" class="main-navigation" aria-label="<?php _e( 'Primary Menu', 'manduca' ); ?>">
 								<?php
-									/*
-									*Filter of submenu icon
-									**/
-									$submenu_icon = apply_filters( 'manduca_submenu_icon' , '<svg viewBox="0 0 1792 1792" xmlns="http://www.w3.org/2000/svg"><path d="M1408 704q0 26-19 45l-448 448q-19 19-45 19t-45-19l-448-448q-19-19-19-45t19-45 45-19h896q26 0 45 19t19 45z"/></svg>' );
-				
 									wp_nav_menu( array(
 										'theme_location' => 'primary',
-										'menu_class'     => 'primary-menu',
-										'after'			 => $submenu_icon
+										'menu_class'     => 'primary-menu'
 									 ) );
 								?>
 							</nav><!-- .main-navigation -->
